# niva-aquainfra

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_script.py
.binder/: environment.yml
Ferrybox scripts/: Dockerfile  README.md  dependencies.R  entrypoint.sh  scripts.txt
Ferrybox scripts/all_functions/: netcdf_assessment_area.R  netcdf_extract_fb_data.R  netcdf_join_dataframes.R  netcdf_logger_extract.R  netcdf_position_plot.R  netcdf_scatter_datax_vs_datay.R  netcdf_scatter_plot.R  netcdf_scatter_station_fb.R  netcdf_tile_plot.R
Ferrybox scripts/coordinate_plot/: READ ME.txt  README.md  netcdf_coords_value_point_plot.R
Ferrybox scripts/extract_fb_data/: READ ME.txt  README.md  netcdf_extract_save_fb.R
Ferrybox scripts/position_plot/: README.md  netcdf_position_plot.R
Ferrybox scripts/scatter_plot/: README.md  netcdf_scatter_plot.R
Ferrybox scripts/tile_plot/: netcdf_tile_plot.R
Ferrybox scripts/time_series/: READ ME.txt  README.md  netcdf_time_value_plot.R
code/: aquainfra_presentation.ipynb  plot_ferrybox_time-lat.ipynb
code/river_inputs/: chem1_get_data.ipynb  chem2_outliers_manual_cleaning.ipynb  (+13 more)
hydrochem_trends_river_oslofjord_use_case/: main.py
notebooks/: aquainfra_presentation.ipynb  create_oslofjord_dataset.ipynb  plot_ferrybox.ipynb
pygeoapi_processes/: docker_utils.py  netcdf_assessment_area.json  netcdf_assessment_area.py  netcdf_extract_fb_data.json  netcdf_extract_fb_data.py  netcdf_extract_save_fb.json  netcdf_extract_save_fb.py  netcdf_join_dataframes.json  netcdf_join_dataframes.py  netcdf_logger_extract.json  netcdf_logger_extract.py  netcdf_scatter_datax_vs_datay.json  netcdf_scatter_datax_vs_datay.py  netcdf_scatter_station_plot.json  netcdf_scatter_station_plot.py  netcdf_tile_plot.json  netcdf_tile_plot.py  position_plot.json  position_plot.py  scatter_plot.json  scatter_plot.py  tile_plot.py
ramses/: README.md  clean_noneg_dataset.py  pyproject.toml  remove_negatives.py
(+158 files in other folders)
